fix: ensure local directory path ends with a trailing slash in FTP deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           server: ${{ secrets.CPANEL_HOST }}
           username: ${{ secrets.CPANEL_USER }}
           password: ${{ secrets.CPANEL_PASS }}
-          local-dir: .
+          local-dir: ./
           server-dir: /home/punkestu/repositories/anime-app-next/
           exclude: |
             **/.git*
