--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Build Next.js
         run: npm run build
 
+  upload:
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Upload via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.6
         with:
