fix: update exclude patterns in FTP deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,8 @@ jobs:
           local-dir: ./
           server-dir: /home/punkestu/repositories/anime-app-next/
           exclude: |
+            .git/
+            .github/
             **/.git*
             **/.github*
             node_modules/**
