fix: update server directory path and refine exclude patterns in FTP deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,9 +34,10 @@ jobs:
           username: ${{ secrets.CPANEL_USER }}
           password: ${{ secrets.CPANEL_PASS }}
           local-dir: ./
-          server-dir: /home/punkestu/repositories/anime-app-next/
+          server-dir: /repositories/anime-app-next/
           exclude: |
             **/.git*
             **/.git*/**
             **/node_modules/**
+            .vscode/**
             .next/cache/**
