--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/cheerio": "^0.22.35",
     "cheerio": "^1.0.0",
     "flowbite": "^3.0.0",
+    "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
