--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cheerio": "^1.0.0",
     "flowbite": "^3.0.0",
     "js-cookie": "^3.0.5",
-    "next": "15.1.6",
+    "next": "^15.5.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
